codex-rs/tui/src/bottom_pane/chat_composer/snapshots/codex_tui__bottom_pane__chat_composer__sparkle__tests__astra_voice_composer.snap
---
source: tui/src/bottom_pane/chat_composer/sparkle_tests.rs
expression: "baseline.content.chunks(60).map(|row|\nrow.iter().map(ratatui::buffer::Cell::symbol).collect::<String>()).collect::<Vec<_>>().join(\"\\n\")"
---
                                                            
 voice ● listening                /voice mute   /voice stop 
   mic ▁▃▄▅▆█  ore █▆▅▄▃▁                                   
                                                            
› Ask Ore to do anything                                    
                                                            
  ? for shortcuts                        100% context left
