codex-rs/tui/src/bottom_pane/chat_composer/snapshots/codex_tui__bottom_pane__chat_composer__sparkle__tests__cleared_recovered_draft_keeps_sparkle_dismissed.snap
---
source: tui/src/bottom_pane/chat_composer/sparkle_tests.rs
expression: "text(&draw(&pane.composer, 80, now).0)"
---

› Ask Ore to do anything

  ? for shortcuts                                            100% context left
