codex-rs/tui/src/bottom_pane/chat_composer/snapshots/codex_tui__bottom_pane__chat_composer__sparkle__tests__review_regression_canceling_a_held_slash_restores_sparkle_command_tracking.snap
---
source: tui/src/bottom_pane/chat_composer/sparkle_tests.rs
expression: "snapshots.join(\"\\n\\n\")"
---
gpt-6-astra
after immediately canceling the held slash:
                            ⠈     ⢀     ⠁                 ⠂
›⠁Ask Ore to do anything           ⠈      ⠁
       ⢀            ⠠     ⠄         ⠠          ⢀    ⠠     ⡀
  ? for shortcuts                                            100% context left
after /model:
                            ⠈     ⢀     ⠁                 ⠂
›⠁Ask Ore to do anything           ⠈      ⠁
       ⢀            ⠠     ⠄         ⠠          ⢀    ⠠     ⡀
  ? for shortcuts                                            100% context left

gpt-5.5
after immediately canceling the held slash:

› Ask Ore to do anything

  ? for shortcuts                                            100% context left
after /model:
                            ⠈     ⢀     ⠁                 ⠂
›⠁Ask Ore to do anything           ⠈      ⠁
       ⢀            ⠠     ⠄         ⠠          ⢀    ⠠     ⡀
  ? for shortcuts                                            100% context left
