codex-rs/tui/src/bottom_pane/chat_composer/snapshots/codex_tui__bottom_pane__chat_composer__sparkle__tests__shortcut_help_hides_visible_sparkles_without_restarting_their_deadline.snap
---
source: tui/src/bottom_pane/chat_composer/sparkle_tests.rs
expression: "snapshots.join(\"\\n\\n\")"
---
expires during help: false
initial:
                            ⠈     ⢀     ⠁                 ⠂
›⠁Ask Ore to do anything           ⠈      ⠁
       ⢀            ⠠     ⠄         ⠠          ⢀    ⠠     ⡀
  ? for shortcuts                                            100% context left
shortcut help:
  Keyboard shortcuts

  Compose                       Session
  /        Commands             tab  Send message
  @        Mention files        ⌥,   Less reasoning
  !        Shell command        ⌥.   More reasoning
  ⌃j       New line             f4   Inspect activity
  ⌃v       Paste image          ⌃c   Quit
  ⌃g       External editor
  ⌃r       Search history       Transcript (open first)
  esc esc  Edit last message    ⌃t            Open transcript
                                f3            Find text
                                pgup / pgdn   Scroll
                                ⌃space        Start selection
                                ⌃home / ⌃end  Top / latest
                                ⇧⌥, / ⇧⌥.     Top / latest

  /keymap customize

› Ask Ore to do anything

  ? / esc close
after closing:
                                        ⠁               ⡀   ⠄           ⠄   ⠄
› Ask Ore to do anything                                     ⠈
      ⠠                             ⠠        ⢀ ⢀     ⡀                         ⠄
  ? for shortcuts                                            100% context left

expires during help: true
initial:
                            ⠈     ⢀     ⠁                 ⠂
›⠁Ask Ore to do anything           ⠈      ⠁
       ⢀            ⠠     ⠄         ⠠          ⢀    ⠠     ⡀
  ? for shortcuts                                            100% context left
shortcut help:
  Keyboard shortcuts

  Compose                       Session
  /        Commands             tab  Send message
  @        Mention files        ⌥,   Less reasoning
  !        Shell command        ⌥.   More reasoning
  ⌃j       New line             f4   Inspect activity
  ⌃v       Paste image          ⌃c   Quit
  ⌃g       External editor
  ⌃r       Search history       Transcript (open first)
  esc esc  Edit last message    ⌃t            Open transcript
                                f3            Find text
                                pgup / pgdn   Scroll
                                ⌃space        Start selection
                                ⌃home / ⌃end  Top / latest
                                ⇧⌥, / ⇧⌥.     Top / latest

  /keymap customize

› Ask Ore to do anything

  ? / esc close
after closing:

› Ask Ore to do anything

  ? for shortcuts                                            100% context left
